--- a/source/_posts/2018-09-23-api-esis.markdown
+++ b/source/_posts/2018-09-23-api-esis.markdown
@@ -7,9 +7,8 @@ categories:
     - api
 ---
 
-At BoardGameGeek, we've been working on a new, mostly RESTish private API in
-conjunction with an ongoing redesign.  Currently, the only consumer of the API
-is our Angular front end; in order to improve performance of the front end, as
+At BoardGameGeek, we've been working on a new, mostly RESTish private API for
+our new Angular front end. In order to improve performance of the front end, as
 well as to take pressure off of our application servers, we added
 [Varnish](https://varnish-cache.org/) caching to our API via
 [Fastly](https://www.fastly.com/). there is a good summary of Varnish at the
